# BAM-file-hash-generator

./: Cargo.toml  README.md
src/: main.rs
