[package]
name = "bam_hash_generator"
version = "0.1.0"
authors = ["nickr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { git = "https://github.com/zaeleus/noodles.git", features = ["bam"] }
structopt = "0.3.21"
md-5 = "0.9.1"